# animewreck

./: .dockerignore  .gitignore  Autoencoder.ipynb  CNN.ipynb  Dockerfile  LICENSE  LSTM.ipynb  Pytorch_NN_ratings.ipynb  README.md  augment_dataset.ipynb  dataset_loader.ipynb  docker-compose.yml  package-lock.json  pytorch_pca_nn.ipynb  requirements.txt  server.py  training.ipynb  vue.config.js
public/: index.html
server/: constants.py  main.py  model.py  nginx.conf  preprocessor.py  recommender.py
services/backend/: Dockerfile  pyproject.toml
services/backend/src/: constants.py  main.py  model.py  preprocessor.py  recommender.py
services/frontend/: Dockerfile  package-lock.json  package.json
services/frontend/src/: main.js  store.js
services/frontend/src/components/: AnimeWatchHistoryRecommender.vue
services/frontend/src/views/: Recommendations.vue
services/web_server/: nginx.conf
src/: App.vue  router.js  store.js
src/components/: AnimeGraphExplorer.vue  AnimeRecommendationLister.vue  AnimeWatchHistoryForm.vue  AnimeWatchHistoryLister.vue  AnimeWatchHistoryRecommender.vue
src/views/: AnimeWatchHistory.vue  Home.vue
static/: recommendation.html
